tests/NormalTests/paczka2/big_fuzzy/20861841.err
Error in line 4: HdqkCQ A209 90,4
Error in line 20: S317 A209 119,4
Error in line 28: S317 A75 94,4
Error in line 43: 09RX A75 17,4
Error in line 18: gxhrKDU A75 303,6
Error in line 50: S317 A209 89,3
Error in line 52: S317 S317 90,0
Error in line 63: S317 S516 29,7
Error in line 46: 09RX A209 30,6
Error in line 58: Op4cYwtuCM S317 51,5
Error in line 59: jwk7ixj S516 70,2
Error in line 68: S317 S317 40,0
Error in line 80: jwk7ixj A209 77,0
Error in line 82: Op4cYwtuCM S516 10,8
Error in line 89: Op4cYwtuCM A75 73,8
Error in line 83: jwk7ixj S516 53,1
Error in line 93: jwk7ixj S317 26,1
Error in line 96: jwk7ixj A209 7,7
Error in line 98: jwk7ixj S317 22,7
Error in line 100: gxhrKDU A209 29,4
Error in line 57: HdqkCQ A209 21,2
Error in line 97: Op4cYwtuCM A209 36,7
Error in line 114: GjwYbwCiqpQ A75 5,5
Error in line 115: S317 A75 23,8
Error in line 111: gxhrKDU A75 55,4
Error in line 123: gxhrKDU A209 97,1
Error in line 128: GjwYbwCiqpQ A209 52,3
Error in line 129: GjwYbwCiqpQ S516 65,4
Error in line 134: S317 S516 -2,4
Error in line 124: S317 S516 78,1
Error in line 150: GjwYbwCiqpQ A75 71,9
Error in line 158: Op4cYwtuCM A75 60,0
Error in line 153: S317 A209 71,8
Error in line 172: Op4cYwt|CM S317 55,3
Error in line 173: 09RX S317 54,08
Error in line 175: 09RX S317 187,4
Error in line 159: Op4cYwtuCM A209 28,8
Error in line 184: S317 A209 234,9
Error in line 181: GjwYbwCiqpQ S516 14,5
Error in line 147: HdqkCQ A75 175,6
Error in line 185: S317 S317 79,5
Error in line 196: S317 A75 40,7
Error in line 192: gxhrKDU A75 77,8
Error in line 211: GjwYbwCiqpQ S516 77,0
Error in line 203: 09RX A75 89,9
Error in line 216: GjwYbwCiqpQ A209 35,4
Error in line 222: GjwYbwCiqpQ S516 52,8
Error in line 224: GjwYbwCiqpQ S317 37,3
Error in line 221: Op4cYwtuCM S317 36,7
Error in line 191: jwk7ixj A209 2,3
Error in line 226: Op4cYwtuCM A209 99,8
Error in line 208: HdqkCQ A75 1,0
Error in line 229: Op4cYwtuCM S516 40,3
Error in line 234: Op4cYwtuCM A209 26,7
Error in line 230: HdqkCQ S317 43,4
Error in line 245: jwk7ixj A75 92,31
